# RAG4TheBeamBook

./: .gitignore
rag/: README.md  download_model.py  pyproject.toml  test.sh
rag-app-instructions/: prompts-for-coding-agent.md  tasks-for-coding-agent.md
rag/src/beam_rag/: __init__.py  cli.py  document_processor.py  rag_agent.py  vector_store.py
rag/tests/: __init__.py  conftest.py  test_cli.py  test_document_processor.py  test_rag_agent.py  test_vector_store.py
